adding design for today, will start over next time

--- a/index.html
+++ b/index.html
@@ -1,77 +1,192 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
+
   <title>Frontend Mentor | Recipe page</title>
+  <link rel="stylesheet" href="style.css">
+
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+    }
+
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
   </style>
 </head>
+
 <body>
 
-  Simple Omelette Recipe
+  <main class="recipe-container">
 
-  An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked 
-  to perfection, optionally filled with your choice of cheese, vegetables, or meats.
+    <section class="image-container">
 
-  Preparation time
+      <img class="recipe-image" src="assets/images/image-omelette.jpeg" alt="Image of an Omelette">
 
-  Total: Approximately 10 minutes
-  Preparation: 5 minutes
-  Cooking: 5 minutes
+    </section>
 
-  Ingredients
+    <header class="recipe-header-container">
 
-  2-3 large eggs
-  Salt, to taste
-  Pepper, to taste
-  1 tablespoon of butter or oil
-  Optional fillings: cheese, diced vegetables, cooked meats, herbs
+      <h1 classs="recipe-header">
+        Simple Omelette Recipe
+      </h1>
 
-  Instructions
+      <h2 class="recipe-sub-header">
+        An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked
+        to perfection, optionally filled with your choice of cheese, vegetables, or meats.
+      </h2>
 
-  Beat the eggs: In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. 
-  You can add a tablespoon of water or milk for a fluffier texture.
+    </header>
 
-  Heat the pan: Place a non-stick frying pan over medium heat and add butter or oil.
 
-  Cook the omelette: Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure 
-  the eggs evenly coat the surface.
+    <section class="recipe-preperation-container">
 
-  Add fillings (optional): When the eggs begin to set at the edges but are still slightly runny in the 
-  middle, sprinkle your chosen fillings over one half of the omelette.
+      <p class="recipe-prep-list-header">
+        Preparation time
+      </p>
 
-  Fold and serve: As the omelette continues to cook, carefully lift one edge and fold it over the 
-  fillings. Let it cook for another minute, then slide it onto a plate.
+      <ul class="recipe-prep-list">
+        <li class="recipe-prep-list-item">
+          Total: Approximately 10 minutes
+        </li>
+        <li class="recipe-prep-list-item">
+          Preparation: 5 minutes
+        </li>
+        <li class="recipe-prep-list-item">
+          Cooking: 5 minutes
+        </li>
+      </ul>
 
-  Enjoy: Serve hot, with additional salt and pepper if needed.
+    </section>
 
-  Nutrition
+    <section class="recipe-ingredients-container">
 
-  The table below shows nutritional values per serving without the additional fillings.
+      <p class="recipe-ingredients-list-header">
+        Ingredients
+      </p>
 
-  Calories
-  277kcal
+      <ul class="recipe-ingredients-list">
+        <li class="recipe-ingredients-list-item">
+          2-3 large eggs
+        </li>
+        <li class="recipe-ingredients-list-item">
+          Salt, to taste
+        </li>
+        <li class="recipe-ingredients-list-item">
+          Pepper, to taste
+        </li>
+        <li class="recipe-ingredients-list-item">
+          1 tablespoon of butter or oil
+        </li>
+        <li class="recipe-ingredients-list-item">
+          Optional fillings: cheese, diced vegetables, cooked meats, herbs
+        </li>
+      </ul>
 
-  Carbs
-  0g
+    </section>
 
-  Protein
-  20g
+    <br class="recipe-breakline">
 
-  Fat
-  22g
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    <section class="recipe-instructions-container">
+
+      <p class="recipe-instructions-list-header">
+        Instructions
+      </p>
+
+      <ol class="recipe-ingredients-list">
+        <li class="recipe-ingredients-list-item">
+          Beat the eggs: In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed.
+          You can add a tablespoon of water or milk for a fluffier texture.
+        </li>
+
+        <li class="recipe-ingredients-list-item">
+          Heat the pan: Place a non-stick frying pan over medium heat and add butter or oil.
+        </li>
+
+        <li class="recipe-ingredients-list-item">
+          Cook the omelette: Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure
+          the eggs evenly coat the surface.
+        </li>
+
+        <li class="recipe-ingredients-list-item">
+          Add fillings (optional): When the eggs begin to set at the edges but are still slightly runny in the
+          middle, sprinkle your chosen fillings over one half of the omelette.
+        </li>
+
+        <li class="recipe-ingredients-list-item">
+          Fold and serve: As the omelette continues to cook, carefully lift one edge and fold it over the
+          fillings. Let it cook for another minute, then slide it onto a plate.
+        </li>
+
+        <li class="recipe-ingredients-list-item">
+          Enjoy: Serve hot, with additional salt and pepper if needed.
+        </li>
+
+      </ol>
+
+    </section>
+
+    <br class="recipe-breakline">
+
+    <section class="recipe-nutrition-container">
+
+      <p class="recipe-nutrition-header">
+        Nutrition
+      </p>
+
+      <p class="recipe-nutrition-sub-header">
+        The table below shows nutritional values per serving without the additional fillings.
+      </p>
+
+      <p class="recipe-nutrition-category">
+        Calories
+      </p>
+      <p class="recipe=nutrition-category-value">
+        277kcal
+      </p>
+
+      <br class="recipe-breakline">
+
+      <p class="recipe-nutrition-category">
+        Carbs
+      </p>
+
+      <p class="recipe=nutrition-category-value">
+        0g
+      </p>
+
+      <br class="recipe-breakline">
+
+      <p class="recipe-nutrition-category">
+        Protein
+      </p>
+      <p class="recipe=nutrition-category-value">
+        20g
+      </p>
+
+      <br class="recipe-breakline">
+
+      <p class="recipe-nutrition-category">
+        Fat
+      </p>
+      <p class="recipe=nutrition-category-value">
+        22g
+      </p>
+
+    </section>
+
+  </main>
+
 </body>
+
 </html>
