started css from scratch

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <header class="recipe-header-container">
 
-      <h1 classs="recipe-header">
+      <h1 class="recipe-header">
         Simple Omelette Recipe
       </h1>
 
@@ -57,13 +57,13 @@
 
       <ul class="recipe-prep-list">
         <li class="recipe-prep-list-item">
-          Total: Approximately 10 minutes
+          <span>Total:</span> Approximately 10 minutes
         </li>
         <li class="recipe-prep-list-item">
-          Preparation: 5 minutes
+          <span>Preparation:</span> 5 minutes
         </li>
         <li class="recipe-prep-list-item">
-          Cooking: 5 minutes
+          <span>Cooking:</span> 5 minutes
         </li>
       </ul>
 
