--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
     </section>
 
-    <br class="recipe-breakline">
+    <div class="recipe-breakline"></div>
 
     <section class="recipe-instructions-container">
 
@@ -103,32 +103,32 @@
         Instructions
       </p>
 
-      <ol class="recipe-ingredients-list">
-        <li class="recipe-ingredients-list-item">
+      <ol class="recipe-instructions-list">
+        <li class="recipe-instructions-list-item">
           Beat the eggs: In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed.
           You can add a tablespoon of water or milk for a fluffier texture.
         </li>
 
-        <li class="recipe-ingredients-list-item">
+        <li class="recipe-instructions-list-item">
           Heat the pan: Place a non-stick frying pan over medium heat and add butter or oil.
         </li>
 
-        <li class="recipe-ingredients-list-item">
+        <li class="recipe-instructions-list-item">
           Cook the omelette: Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure
           the eggs evenly coat the surface.
         </li>
 
-        <li class="recipe-ingredients-list-item">
+        <li class="recipe-instructions-list-item">
           Add fillings (optional): When the eggs begin to set at the edges but are still slightly runny in the
           middle, sprinkle your chosen fillings over one half of the omelette.
         </li>
 
-        <li class="recipe-ingredients-list-item">
+        <li class="recipe-instructions-list-item">
           Fold and serve: As the omelette continues to cook, carefully lift one edge and fold it over the
           fillings. Let it cook for another minute, then slide it onto a plate.
         </li>
 
-        <li class="recipe-ingredients-list-item">
+        <li class="recipe-instructions-list-item">
           Enjoy: Serve hot, with additional salt and pepper if needed.
         </li>
 
@@ -136,7 +136,7 @@
 
     </section>
 
-    <br class="recipe-breakline">
+    <div class="recipe-breakline"></div>
 
     <section class="recipe-nutrition-container">
 
@@ -149,38 +149,26 @@
       </p>
 
       <p class="recipe-nutrition-category">
-        Calories
-      </p>
-      <p class="recipe=nutrition-category-value">
-        277kcal
-      </p>
+        Calories<span class="recipe-nutrition-value">277kcal</span>
 
-      <br class="recipe-breakline">
+      <div class="recipe-nutrition-breakline"></div>
 
       <p class="recipe-nutrition-category">
-        Carbs
+        Carbs<span class="recipe-nutrition-value">0g</span>
       </p>
 
-      <p class="recipe=nutrition-category-value">
-        0g
-      </p>
 
-      <br class="recipe-breakline">
+      <div class="recipe-nutrition-breakline"></div>
 
       <p class="recipe-nutrition-category">
-        Protein
-      </p>
-      <p class="recipe=nutrition-category-value">
-        20g
+        Protein<span class="recipe-nutrition-value">20g</span>
       </p>
 
-      <br class="recipe-breakline">
+
+      <div class="recipe-nutrition-breakline"></div>
 
       <p class="recipe-nutrition-category">
-        Fat
-      </p>
-      <p class="recipe=nutrition-category-value">
-        22g
+        Fat<span class="recipe-nutrition-value">22g</span>
       </p>
 
     </section>
