--- a/index.html
+++ b/index.html
@@ -105,31 +105,34 @@
 
       <ol class="recipe-instructions-list">
         <li class="recipe-instructions-list-item">
-          Beat the eggs: In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed.
+          <span>Beat the eggs:</span> In a bowl, beat the eggs with a pinch of salt and pepper until they are well
+          mixed.
           You can add a tablespoon of water or milk for a fluffier texture.
         </li>
 
         <li class="recipe-instructions-list-item">
-          Heat the pan: Place a non-stick frying pan over medium heat and add butter or oil.
+          <span>Heat the pan:</span> Place a non-stick frying pan over medium heat and add butter or oil.
         </li>
 
         <li class="recipe-instructions-list-item">
-          Cook the omelette: Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure
+          <span>Cook the omelette:</span> Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to
+          ensure
           the eggs evenly coat the surface.
         </li>
 
         <li class="recipe-instructions-list-item">
-          Add fillings (optional): When the eggs begin to set at the edges but are still slightly runny in the
+          <span>Add fillings (optional):</span> When the eggs begin to set at the edges but are still slightly runny in
+          the
           middle, sprinkle your chosen fillings over one half of the omelette.
         </li>
 
         <li class="recipe-instructions-list-item">
-          Fold and serve: As the omelette continues to cook, carefully lift one edge and fold it over the
+          <span>Fold and serve:</span> As the omelette continues to cook, carefully lift one edge and fold it over the
           fillings. Let it cook for another minute, then slide it onto a plate.
         </li>
 
         <li class="recipe-instructions-list-item">
-          Enjoy: Serve hot, with additional salt and pepper if needed.
+          <span>Enjoy:</span> Serve hot, with additional salt and pepper if needed.
         </li>
 
       </ol>
@@ -149,26 +152,38 @@
       </p>
 
       <p class="recipe-nutrition-category">
-        Calories<span class="recipe-nutrition-value">277kcal</span>
-
-      <div class="recipe-nutrition-breakline"></div>
-
-      <p class="recipe-nutrition-category">
-        Carbs<span class="recipe-nutrition-value">0g</span>
+        Calories
       </p>
 
-
-      <div class="recipe-nutrition-breakline"></div>
-
-      <p class="recipe-nutrition-category">
-        Protein<span class="recipe-nutrition-value">20g</span>
+      <p class="recipe-nutrition-value">
+        277kcal
       </p>
 
+      <div class="recipe-nutrition-breakline"></div>
+
+      <p class="recipe-nutrition-category">
+        Carbs
+      </p>
+      <p class="recipe-nutrition-value">
+        0g
+      </p>
 
       <div class="recipe-nutrition-breakline"></div>
 
       <p class="recipe-nutrition-category">
-        Fat<span class="recipe-nutrition-value">22g</span>
+        Protein
+      </p>
+      <p class="recipe-nutrition-value">
+        20g
+      </p>
+
+      <div class="recipe-nutrition-breakline"></div>
+
+      <p class="recipe-nutrition-category">
+        Fat
+      </p>
+      <p class="recipe-nutrition-value">
+        22g
       </p>
 
     </section>
